--- a/themes/sacre-davey/style.css
+++ b/themes/sacre-davey/style.css
@@ -353,80 +353,81 @@ textarea {
 # Page Templates
 --------------------------------------------------------------*/
 /* Front page */
-.page-template-contact-page {
-  width: 98.5vw; }
-  .page-template-contact-page .entry-title {
-    text-align: center;
-    color: white;
-    line-height: 180px; }
-  .page-template-contact-page .entry-header {
-    color: white;
-    height: 50vw;
-    text-align: center;
-    width: 100vw;
-    max-height: 300px; }
-    .page-template-contact-page .entry-header h1 {
-      font-family: "Impact", "Charcoal", sans-serif;
-      font-size: 48px;
-      text-transform: uppercase;
-      letter-spacing: 3px; }
-  .page-template-contact-page .entry-content {
-    display: -ms-flexbox;
-    display: flex;
-    width: 80%;
-    margin: 0 auto;
-    -ms-flex-flow: column nowrap;
-        flex-flow: column nowrap; }
-    @media (min-width: 600px) {
-      .page-template-contact-page .entry-content {
-        -ms-flex-flow: row wrap;
-            flex-flow: row wrap; } }
+.page-template-contact-page .entry-title {
+  text-align: center;
+  color: white;
+  line-height: 180px; }
+
+.page-template-contact-page .entry-header {
+  color: white;
+  height: 50vw;
+  text-align: center;
+  width: 100%;
+  max-height: 300px; }
+  .page-template-contact-page .entry-header h1 {
+    font-family: "Impact", "Charcoal", sans-serif;
+    font-size: 48px;
+    text-transform: uppercase;
+    letter-spacing: 3px; }
+
+.page-template-contact-page .entry-content {
+  display: -ms-flexbox;
+  display: flex;
+  width: 80%;
+  margin: 0 auto;
+  -ms-flex-flow: column nowrap;
+      flex-flow: column nowrap; }
+  @media (min-width: 600px) {
+    .page-template-contact-page .entry-content {
+      -ms-flex-flow: row wrap;
+          flex-flow: row wrap; } }
+
+p {
+  width: 100%; }
 
 form {
   width: 100%; }
-  @media (min-width: 600px) {
-    form {
-      width: 28vw; } }
-  form p {
-    width: 100%; }
   form textarea {
-    width: 100%;
-    height: 20vw; }
-    @media (min-width: 600px) {
-      form textarea {
-        width: 50%; } }
-  form input,
+    height: 20vw;
+    max-height: 300px; }
+  form input[type="email"],
+  form input[type="text"],
   form textarea {
     width: 100%;
     background-color: #f4f4f4;
-    border: 3px blue solid;
-    margin-top: 10px; }
-    @media (min-width: 600px) {
-      form input,
-      form textarea {
-        width: 50%; } }
+    margin-bottom: 30px; }
   form input {
     font-size: 1.5rem;
     padding: 7px; }
   form .required {
     color: #272D66; }
+  form input[type="submit"] {
+    padding: 10px 20px;
+    text-align: center;
+    border: none;
+    background-color: #272D66;
+    color: white;
+    box-shadow: none;
+    font-size: 1.5rem;
+    text-transform: uppercase; }
 
 iframe {
   width: 100%; }
 
 .offices-wrapper {
+  width: 80%;
+  margin: 0 auto;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-pack: center;
       justify-content: center;
-  -ms-flex-align: center;
-      align-items: center;
+  -ms-flex-align: start;
+      align-items: flex-start;
   -ms-flex-flow: row wrap;
       flex-flow: row wrap; }
   .offices-wrapper .office-block {
     -ms-flex: 1 0 28%;
         flex: 1 0 28%;
-    min-height: 825px;
     padding-right: 20px; }
     .offices-wrapper .office-block h2 {
       color: #272D66; }
